# robotics-action-prediction-system

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FIX_SUMMARY.md  LINTING_COMPLETION_REPORT.md  LINTING_STATUS.md  MLOPS_SETUP_COMPLETE.md  MONITORING_VERIFICATION.md  PRODUCTION_CODE_QUALITY.md  PRODUCTION_READINESS.md  PRODUCTION_VALIDATION_REPORT.md  QUICK_START.md  README.md  README_MLOPS.md  RENDER_DEPLOYMENT.md  apply_fixes.py  check_linting.py  deploy.sh  docker-compose.yml  fix_linting.py  fix_remaining.py  health_check.py  prometheus.yml  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt  run_fixes.py  serve.py  test_model_robustness.py  test_predictions.py
.github/workflows/: deploy-render.yml  mlops-pipeline.yml
app/: api.py
models/: action_dimension_metadata.json  action_mask.npy  model_summary.json  normalization_stats.json  robotics_lstm.onnx
src/: __init__.py  data_loader.py  mlops.py  model.py  monitoring.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_imports.py  test_model.py
